Change push sub folder

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
         id: docker-metadata
         uses: docker/metadata-action@v4
         with:
-          images: eu.gcr.io/${{ secrets.gke-project }}/php
+          images: eu.gcr.io/${{ secrets.gke-project }}/website/php
           tags: |
             type=raw,value=${{ github.sha }},priority=9999
             ${{ inputs.tags }}
@@ -113,7 +113,7 @@ jobs:
         id: docker-metadata
         uses: docker/metadata-action@v4
         with:
-          images: eu.gcr.io/${{ secrets.gke-project }}/caddy
+          images: eu.gcr.io/${{ secrets.gke-project }}/website/caddy
           tags: |
             type=raw,value=${{ github.sha }},priority=9999
             ${{ inputs.tags }}
@@ -127,10 +127,10 @@ jobs:
           tags: ${{ steps.docker-metadata.outputs.tags }}
           labels: ${{ steps.docker-metadata.outputs.labels }}
           cache-from: |
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/caddy:latest
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/php:latest
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/caddy:${{ github.sha }}
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/php:${{ github.sha }}
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/caddy:latest
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/php:latest
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/caddy:${{ github.sha }}
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/php:${{ github.sha }}
           cache-to: type=inline
     outputs:
       version: ${{ github.sha }}
@@ -164,7 +164,7 @@ jobs:
         id: docker-metadata
         uses: docker/metadata-action@v4
         with:
-          images: eu.gcr.io/${{ secrets.gke-project }}/pwa
+          images: eu.gcr.io/${{ secrets.gke-project }}/website/pwa
           tags: |
             type=raw,value=${{ github.sha }},priority=9999
             ${{ inputs.tags }}
@@ -178,8 +178,8 @@ jobs:
           tags: ${{ steps.docker-metadata.outputs.tags }}
           labels: ${{ steps.docker-metadata.outputs.labels }}
           cache-from: |
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/pwa:latest
-            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/pwa:${{ github.sha }}
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/pwa:latest
+            type=registry,ref=eu.gcr.io/${{ secrets.gke-project }}/website/pwa:${{ github.sha }}
           cache-to: type=inline
     outputs:
       version: ${{ github.sha }}
