--- a/helm/api-platform/values.yaml
+++ b/helm/api-platform/values.yaml
@@ -45,8 +45,8 @@ postgresql:
   enabled: true
   # If bringing your own PostgreSQL, the full uri to use
   #url: postgresql://api-platform:!ChangeMe!@database:5432/api?serverVersion=13&charset=utf8
-  # postgresqlUsername: "example"
-  # postgresqlPassword: "!ChangeMe!"
+  postgresqlUsername: "example"
+  postgresqlPassword: "!ChangeMe!"
   postgresqlDatabase: "api"
   # Persistent Volume Storage configuration.
   # ref: https://kubernetes.io/docs/user-guide/persistent-volumes
