--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,7 +33,7 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: prod
-      url: test.api-platform.com
+      url: test-v2.preprod-tilleuls.ovh
       docker-images-version: ${{ github.sha }}
       cors: '["https://test.api-platform.com", "http://localhost", "https://localhost", "http://localhost:3000"]'
       release: website
@@ -53,9 +53,9 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: ${{ needs.build.outputs.version }}
-      url: ${{ needs.build.outputs.version }}-test.api-platform.com
+      url: ${{ needs.build.outputs.version }}-test-v2.preprod-tilleuls.ovh
       docker-images-version: ${{ needs.build.outputs.version }}
-      cors: '["https://${{ needs.build.outputs.version }}-test.api-platform.com", "http://localhost", "https://localhost", "http://localhost:3000"]'
+      cors: '["https://${{ needs.build.outputs.version }}-test-v2.preprod-tilleuls.ovh", "http://localhost", "https://localhost", "http://localhost:3000"]'
       release: ${{ needs.build.outputs.version }}
       namespace: ${{ needs.build.outputs.version }}
       gke-cluster: api-platform-demo
