--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,8 +119,12 @@ jobs:
             --set=service.type=NodePort \
             --set=ingress.enabled=true \
             --set=ingress.hosts[0].host=${{ inputs.url }} \
-            --set=ingress.hosts[0].paths[0].path=/ \
+            --set=ingress.hosts[0].paths[0].path=/* \
             --set=ingress.hosts[0].paths[0].pathType=ImplementationSpecific \
+            --set=ingress.tls[0].hosts[0]=${{ inputs.url }} \
+            --set=ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
+            --set=ingress.annotations."cert-manager\.io/cluster-issuer"=letsencrypt-production \
+            --set=ingress.tls[0].secretName=website-ssl \
             --set=php.jwt.secretKey="$JWT_SECRET_KEY" \
             --set=php.jwt.publicKey="$(openssl pkey -in <(echo "$JWT_SECRET_KEY") -passin file:<(echo "$JWT_PASSPHRASE") -pubout)" \
             --set=php.jwt.passphrase=$JWT_PASSPHRASE \
