--- a/helm/api-platform/values.yaml
+++ b/helm/api-platform/values.yaml
@@ -28,7 +28,7 @@ pwa:
 
 bucket:
   s3Url: ChangeMe
-  
+
 caddy:
   image:
     repository: "chart-example.local/api-platform/caddy"
@@ -106,17 +106,17 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+    cpu: 150m
+    memory: 750Mi
+  requests:
+    cpu: 50m
+    memory: 128Mi
 
 # If you use Mercure, you need the managed or the On Premise version to deploy more than one pod: https://mercure.rocks/docs/hub/cluster
 replicaCount: 1
