--- a/helm/api-platform/templates/deployment.yaml
+++ b/helm/api-platform/templates/deployment.yaml
@@ -48,11 +48,16 @@ spec:
                 secretKeyRef:
                   name: {{ include "api-platform.fullname" . }}
                   key: mercure-jwt-secret
-            - name: BUCKET_S3_CONFIG
+            - name: BUCKET_S3_UPSTREAM
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "api-platform.fullname" . }}
-                  key: bucket-s3-url
+                  key: bucket-s3-upstream
+            - name: BUCKET_S3_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "api-platform.fullname" . }}
+                  key: bucket-s3-name
           ports:
             - name: http
               containerPort: 80
