--- a/api/docker/caddy/Caddyfile
+++ b/api/docker/caddy/Caddyfile
@@ -11,14 +11,18 @@ log {
 }
 # Matches requests for HTML documents, for static files and for Next.js files,
 # except for known API paths and paths with extensions handled by API Platform
-@pwa expression `(
-        header({'Accept': '*text/html*'})
-        && !path ('/', '/static*', '/docs*', '/api*')
-    )
-    || path('/con/*', '/fr/con/*', '/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/images/con/*')`
+# @pwa expression `(
+#         header({'Accept': '*text/html*'})
+#         && !path ('/*', '/static*', '/docs*', '/api*', '/page-data*')
+#     )
+#     || path('/con/*', '/fr/con/*', '/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/images/con/*')`
+@pwa expression `path('/con/*','/con', '/fr/con/*', '/fr/con', '/en/con/*', '/en/con', '/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/images/con/*')`
     # || path('/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/sitemap*')`
 
-@bucket_s3 expression `path('/', '/docs*')`
+@bucket_s3 expression `(
+    path('/*')
+&& !path ('/con/*', '/con', '/fr/con/*', '/fr/con', '/en/con/*', '/en/con', '/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/images/con/*')
+)`
 
 route {
     root * /srv/app/public
@@ -54,9 +58,16 @@ route {
     handle @bucket_s3 {
         reverse_proxy {$BUCKET_S3_UPSTREAM} {
             header_up Host {http.reverse_proxy.upstream.hostport}
-            rewrite {path}/index.html
+            # rewrite {$BUCKET_S3_NAME}{path}/index.html
+            # rewrite {path}/index.html
+            # rewrite /{$BUCKET_S3_NAME}/{path}
+
         }
-        uri replace / {$BUCKET_S3_NAME}
+        # uri path_regexp ^/(.*?)/?$ /{$BUCKET_S3_NAME}/$1/index.html
+        # uri path_regexp ^/(.*?)/?$ $1/index.html
+        try_files {path}index.html {path}/index.html {path}
+        uri replace / /{$BUCKET_S3_NAME}/ 1
+        # uri replace / {$BUCKET_S3_NAME}/
         # rewrite * {path}/index.html
     }
 
