Move ingress class

--- a/helm/api-platform/values.yaml
+++ b/helm/api-platform/values.yaml
@@ -97,6 +97,7 @@ service:
 ingress:
   enabled: false
   annotations: {}
+  className: nginx
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
