fix(caddy): rewrite directories to index.html
- handle urls with non trailing slashes

--- a/api/docker/caddy/Caddyfile
+++ b/api/docker/caddy/Caddyfile
@@ -24,6 +24,9 @@ log {
 && !path ('/con/*', '/con', '/fr/con/*', '/fr/con', '/en/con/*', '/en/con', '/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/images/con/*')
 )`
 
+@withoutExtension not path_regexp .*\.(\w{2,})$
+@withTrailingSlash path_regexp ^(.*)/+$
+
 route {
     root * /srv/app/public
     # root * /{$BUCKET_S3_NAME}/
@@ -49,26 +52,21 @@ route {
     header ?Permissions-Policy "browsing-topics=()"
     # Comment the following line if you don't want Next.js to catch requests for HTML documents.
     # In this case, they will be handled by the PHP app.
-    
-    reverse_proxy @pwa http://{$PWA_UPSTREAM} 
 
-    # rewrite @bucket_s3 /{$BUCKET_S3_NAME}/{uri}
-    # uri replace / /{$BUCKET_S3_NAME}/
+    reverse_proxy @pwa http://{$PWA_UPSTREAM}
 
     handle @bucket_s3 {
+
         reverse_proxy {$BUCKET_S3_UPSTREAM} {
             header_up Host {http.reverse_proxy.upstream.hostport}
-            # rewrite {$BUCKET_S3_NAME}{path}/index.html
-            # rewrite {path}/index.html
-            # rewrite /{$BUCKET_S3_NAME}/{path}
-
         }
-        # uri path_regexp ^/(.*?)/?$ /{$BUCKET_S3_NAME}/$1/index.html
-        # uri path_regexp ^/(.*?)/?$ $1/index.html
-        try_files {path}index.html {path}/index.html {path}
-        uri replace / /{$BUCKET_S3_NAME}/ 1
-        # uri replace / {$BUCKET_S3_NAME}/
-        # rewrite * {path}/index.html
+
+        # Handles DocumentIndices
+        rewrite @withTrailingSlash /{$BUCKET_S3_NAME}{path}index.html
+        rewrite @withoutExtension /{$BUCKET_S3_NAME}{path}/index.html
+
+        # Everything else should be prefixed
+        rewrite * /{$BUCKET_S3_NAME}{path}
     }
 
     php_fastcgi unix//var/run/php/php-fpm.sock
