--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,6 +113,10 @@ jobs:
             --set=caddy.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/caddy \
             --set=caddy.image.tag=${{ inputs.docker-images-version }} \
             --set=caddy.image.pullPolicy=Always \
+            --set=next.rootUrl=https://${{ inputs.url }} \
+            --set=next.publicEventBriteId= ${{ secrets.NEXT_PUBLIC_EVENT_BRITE_ID }} \
+            --set=next.publicMapboxKey= ${{ secrets.NEXT_PUBLIC_MAPBOX_KEY }} \ 
+            --set=github.key= ${{ secrets.GH_KEY }} \
             --set=pwa.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/pwa \
             --set=pwa.image.tag=${{ inputs.docker-images-version }} \
             --set=pwa.image.pullPolicy=Always \
