--- a/helm/api-platform/templates/secrets.yaml
+++ b/helm/api-platform/templates/secrets.yaml
@@ -13,3 +13,6 @@ data:
   {{- end }}
   php-app-secret: {{ .Values.php.appSecret | default (randAlphaNum 40) | b64enc | quote }}
   mercure-jwt-secret: {{ .Values.mercure.jwtSecret | default (randAlphaNum 40) | b64enc | quote }}
+  next-public-event-brite-id: {{ .Values.next.publicEventBriteId | b64enc | quote }}
+  next-public-mapbox-key: {{ .Values.next.publicMapboxKey | b64enc | quote }}
+  github-key: {{ .Values.github.key | b64enc | quote }}
