--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,13 +87,13 @@ jobs:
           helm repo add bitnami https://charts.bitnami.com/bitnami/
           helm repo add stable https://charts.helm.sh/stable/
           helm dependency build ./helm/api-platform
-      - name: Check for existing namespace
-        id: k8s-namespace
-        run: echo "namespace=$(kubectl get namespace ${{ inputs.namespace }} | tr -d '\n' 2> /dev/null)" >> $GITHUB_OUTPUT
+      # - name: Check for existing namespace
+      #   id: k8s-namespace
+      #   run: echo "namespace=$(kubectl get namespace ${{ inputs.namespace }} | tr -d '\n' 2> /dev/null)" >> $GITHUB_OUTPUT
       # Release name MUST start with a letter
       # GitHub doesn't support multilines environment variables (JWT_*_KEY)
       - name: Deploy in new namespace
-        if: steps.k8s-namespace.outputs.namespace == ''
+        # if: steps.k8s-namespace.outputs.namespace == ''
         run: |
           set -o pipefail
           JWT_PASSPHRASE=$(openssl rand -base64 32)
@@ -138,30 +138,30 @@ jobs:
             --set=postgresql.global.postgresql.auth.password=$(openssl rand -base64 32 | tr -d "=+/") \
             --set=postgresql.global.postgresql.auth.username=website \
             | sed --unbuffered '/USER-SUPPLIED VALUES/,$d'
-      - name: Upgrade namespace
-        if: steps.k8s-namespace.outputs.namespace != ''
-        run: |
-          set -o pipefail
-          helm upgrade ${{ inputs.release }} ./helm/api-platform \
-            --reuse-values \
-            --install \
-            --create-namespace \
-            --debug \
-            --wait \
-            --atomic \
-            --namespace=${{ inputs.namespace }} \
-            --set=app.version=${{ github.sha }} \
-            --set=php.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/php \
-            --set=php.image.tag=${{ inputs.docker-images-version }} \
-            --set=php.image.pullPolicy=Always \
-            --set=caddy.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/caddy \
-            --set=caddy.image.tag=${{ inputs.docker-images-version }} \
-            --set=caddy.image.pullPolicy=Always \
-            --set=pwa.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/pwa \
-            --set=pwa.image.tag=${{ inputs.docker-images-version }} \
-            --set=pwa.image.pullPolicy=Always \
-            --set=php.corsAllowOrigin="^$(echo "${{ join(fromJSON(inputs.cors), '|') }}" | sed 's/\./\\./g')$" \
-            | sed --unbuffered '/USER-SUPPLIED VALUES/,$d'
+      # - name: Upgrade namespace
+      #   if: steps.k8s-namespace.outputs.namespace != ''
+      #   run: |
+      #     set -o pipefail
+      #     helm upgrade ${{ inputs.release }} ./helm/api-platform \
+      #       --reuse-values \
+      #       --install \
+      #       --create-namespace \
+      #       --debug \
+      #       --wait \
+      #       --atomic \
+      #       --namespace=${{ inputs.namespace }} \
+      #       --set=app.version=${{ github.sha }} \
+      #       --set=php.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/php \
+      #       --set=php.image.tag=${{ inputs.docker-images-version }} \
+      #       --set=php.image.pullPolicy=Always \
+      #       --set=caddy.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/caddy \
+      #       --set=caddy.image.tag=${{ inputs.docker-images-version }} \
+      #       --set=caddy.image.pullPolicy=Always \
+      #       --set=pwa.image.repository=eu.gcr.io/${{ secrets.gke-project }}/website/pwa \
+      #       --set=pwa.image.tag=${{ inputs.docker-images-version }} \
+      #       --set=pwa.image.pullPolicy=Always \
+      #       --set=php.corsAllowOrigin="^$(echo "${{ join(fromJSON(inputs.cors), '|') }}" | sed 's/\./\\./g')$" \
+      #       | sed --unbuffered '/USER-SUPPLIED VALUES/,$d'
       - name: Debug kube events
         if: failure()
         run: kubectl get events --namespace=${{ inputs.namespace }} --sort-by .metadata.creationTimestamp
