--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,6 +43,9 @@ jobs:
     secrets:
       gke-credentials: ${{ secrets.GKE_SA_KEY }}
       gke-project: ${{ secrets.GKE_PROJECT }}
+      next-public-event-brite-id: ${{ secrets.NEXT_PUBLIC_EVENT_BRITE_ID }}
+      next-public-mapbox-key: ${{ secrets.NEXT_PUBLIC_MAPBOX_KEY }}
+      gh-key: ${{ secrets.GH_KEY }}
       # cloudflare-api-token: ${{ secrets.CF_API_TOKEN }}
       # cloudflare-zone-id: ${{ secrets.CF_ZONE_ID }}
 
@@ -63,5 +66,8 @@ jobs:
     secrets:
       gke-credentials: ${{ secrets.GKE_SA_KEY }}
       gke-project: ${{ secrets.GKE_PROJECT }}
+      next-public-event-brite-id: ${{ secrets.NEXT_PUBLIC_EVENT_BRITE_ID }}
+      next-public-mapbox-key: ${{ secrets.NEXT_PUBLIC_MAPBOX_KEY }}
+      gh-key: ${{ secrets.GH_KEY }}
       # cloudflare-api-token: ${{ secrets.CF_API_TOKEN }}
       # cloudflare-zone-id: ${{ secrets.CF_ZONE_ID }}
